# app/Http/Controllers/Payment/PixController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\Payment;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\PixRequest;
 use App\Services\Payment\PixService;
+use OpenApi\Attributes as OA;
 
 class PixController extends Controller
 {
@@ -15,11 +16,21 @@ class PixController extends Controller
 
     }
 
+    #[OA\Post(
+        path: "/api/pix",
+        summary: "Create new payment pix",
+        responses: [
+            new OA\Response(
+                response: 201,
+                description: 'Pix Payment created successfully'
+            )
+        ]
+    )]
     public function create(PixRequest $request)
     {
         $data = $request->validated();
         $res = $this->pixService->create($data);
-        return response()->json($res);
+        return response()->json($res, 201);
     }
 
 }
